--- a/frontend/templates/catering_menu.html
+++ b/frontend/templates/catering_menu.html
@@ -34,6 +34,10 @@
       <input type="checkbox" name="is_active" checked />
       <span>{{ t('menu.active', lang) }}</span>
     </label>
+    <label class="checkbox-field">
+      <input type="checkbox" name="is_standard" />
+      <span>{{ t('menu.standard', lang) }}</span>
+    </label>
     <button type="submit" class="btn btn-primary">{{ t('menu.add_button', lang) }}</button>
   </form>
 </section>
